syntax="proto3";

import "google/protobuf/empty.proto";
import "data_schema.proto";

package profile;
option go_package="wartech-studio.com/monster-reacher/libraries/protobuf/profile;profile";

service Profile {
    rpc GetData(GetDataRequest) returns(GetDataResponse);
    rpc Authentication(AuthenticationRequest) returns(AuthenticationResponse);
    rpc Register(RegisterRequest) returns(RegisterResponse);
    rpc AddServiceAuth(AddServiceAuthRequest) returns(google.protobuf.Empty);
    rpc RemoveServiceAuth(RemoveServiceAuthRequest) returns(google.protobuf.Empty);
}

message GetDataRequest {
    string id = 1;
}
message GetDataResponse {
    data_schema.ProfileData data = 1;
}

message AuthenticationRequest {
    string service_name = 1;
    string service_id = 2;
}
message AuthenticationResponse {
    string id =1;
}

message RegisterRequest {
    string service_name = 1;
    string service_id = 2;
}
message RegisterResponse {
    string id =1;
}

message AddServiceAuthRequest {
    string id = 1;
    string service_name = 2;
    string service_id = 3;
}
message RemoveServiceAuthRequest {
    string id = 1;
    string service_name = 2;
}
